# FileTrans

./: CMakeLists.txt  LICENSE  README.md
inc/: Receiver.hpp  Sender.hpp  Session.hpp
src/: Receiver.cpp  RunReceiver.cpp  RunSender.cpp  Sender.cpp  Session.cpp
